platform/argocd/foundations/f683c427-fd19-4811-9c01-805da10e8132.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc410-source-20260829142839-production
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f683c427-fd19-4811-9c01-805da10e8132
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: f9952bf0-7bd7-4528-9d33-1511005db8a2
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc410-source-20260829142839-production
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f683c427-fd19-4811-9c01-805da10e8132
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: f9952bf0-7bd7-4528-9d33-1511005db8a2
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc410-source-20260829142839-production
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f683c427-fd19-4811-9c01-805da10e8132
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: f9952bf0-7bd7-4528-9d33-1511005db8a2
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-http01-solver-ingress
  namespace: kp-rc410-source-20260829142839-production
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: f683c427-fd19-4811-9c01-805da10e8132
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: f9952bf0-7bd7-4528-9d33-1511005db8a2
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kuberploy-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8089
